Update order status
