# src/routes/customer.route.ts
@@ -12,5 +12,6 @@ router.delete('/cart/:product_id', authMiddleware, customerController.removeFrom
 router.get('/favourite', authMiddleware, customerController.getAllFavourites);
 router.post('/favourite', authMiddleware, customerController.addToFavourites);
 router.put('/favourite', authMiddleware, customerController.removeFromFavourites);
+router.put('/cancel_order', authMiddleware, customerController.cancelOrder);
 
 export default router;
